--- a/config/database.yml
+++ b/config/database.yml
@@ -1,21 +1,25 @@
-common: &common
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: talle_db
+# SQLite version 3.x
+#   gem install sqlite3
+#
+#   Ensure the SQLite 3 gem is defined in your Gemfile
+#   gem 'sqlite3'
+#
+default: &default
+  adapter: sqlite3
   pool: 5
+  timeout: 5000
 
-development: &development
-  <<: *common
-  host: localhost
-  username: root
-  password: password
-  
+development:
+  <<: *default
+  database: db/development.sqlite3
+
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
+test:
+  <<: *default
+  database: db/test.sqlite3
+
 production:
-  <<: *common  
-  host: <%= ENV['DB_HOSTNAME'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
-
-
-
+  <<: *default
+  database: db/production.sqlite3
